# Project-Euler

./: .gitignore  .pre-commit-config.yaml  PrimeTools.py  PrimeToolsTest.py  README.md  p001 - multiples of 3, 5.py  p002 - even fibonacci numbers.py  p003 - Largest Prime Factor.py  p004 - Largest palindrome product.py  p006 - Sum Square Differance.py  p007 - 10001st Prime.py  p009 - Special Pythagorean Triplet.py  p010 - Summation Of Primes.py  p011 - Largest Product in a Grid.py  p012 - Highly divisible triangular number.py  p013 - Large Sum.py  p014 -  Longest Collatz Sequence.py  p015 - Lattice paths.py  p016 - Power Digit Sum.py  p017 - Number Letter Counts.py  p018 - Maximum Path Sum I.py  p019 - Counting Sundays.py  p020 - Factorial Digit Sum.py  p021 - Amicable Numbers.py  p022 - Names Scores.py  p023 - Non-Abundant Sums.py  p024 - Lexicographic Permutations.py  p025 - 1000-digit Fibonacci Number.py  p026 - Reciprocal Cycles.py  p027 - Quadratic Primes.py  p028 - Number spiral diagonals.py  p029 - Distinct powers.py  p030 - Digit Fifth Powers.py  p031 - Coin Sums.py  p032 - Pandigital Products.py  p033 - Digit Cancelling Fractions.py  p034 - Digit factorials.py  p035 - Circular Primes.py  p036 - Double-Base Palindromes.py  p037 - Truncatable primes.py  (+27 more)
problems/: BLANK.py  p001.py  p002.py  p003.py  p004.py  p005.py  p006.py  p007.py  p008.py  p009.py  p010.py  p011.py  p012.py  p013.py  p014.py  p015.py  p016.py  p017.py  p018.py  p019.py  p020.py  p021.py  p022.py  p023.py  p024.py  p025.py  p026.py  p027.py  p028.py  p029.py  p030.py  p031.py  p032.py  p033.py  (+11 more)
(+56 files in other folders)
