[tool.poetry]
name = "project-euler"
version = "0.1.0"
description = ""
authors = ["KGB33 <github@bassingthwaite.org>"]

[tool.poetry.dependencies]
python = "^3.8"
pre-commit = "^2.6.0"
mttools = "^0.2.2"
colorama = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[tool.pytest.ini_options]
python_files="p*.py"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
